Allow unused C functions on stricter systems

--- a/meson.build
+++ b/meson.build
@@ -6,6 +6,7 @@ libudev = dependency('libudev')
 
 executable('evcape',
   'evcape.c',
+  c_args: [ '-Wno-unused-function' ],
   dependencies: [ libevdev, libudev ],
   install: true
 )
