--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Build Dependencies
+      run: apt install -y libevdev libudev
     - name: Install Python Dependencies
       run: pip install meson ninja
     - uses: actions/checkout@v4
