--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - name: Install Build Dependencies
-      run: sudo apt install -y libevdev libudev
+      run: sudo apt install -y libevdev-dev libudev-dev
     - name: Install Python Dependencies
       run: pip install meson ninja
     - uses: actions/checkout@v4
